Se crea base de tabla y crearProducto

--- a/src/app/home/productos/crear-producto/crear-producto.component.html
+++ b/src/app/home/productos/crear-producto/crear-producto.component.html
@@ -1,1 +1,31 @@
-<p>crear-producto works!</p>
+<div>
+   
+      <button> Crear Producto </button>
+       <div>Crear Producto</div>
+       <p>Crear nuevo Prudcot</p>
+
+       <p>Nombre</p>
+       <input
+           type="text"
+           id="txtNProducto"
+           name="hookTxtNProducto"
+           onChange={handleChangeNProducto}
+       />
+
+       <p>Detalle</p>
+       <input
+           type="text"
+           id="txtDProducto"
+           name="hookTxtDProducto"
+           onChange={handleChangeDProducto}
+       />
+
+       <p>Stock</p>
+       <input
+           type="text"
+           id="txtSProducto"
+           name="hookTxtSProducto"
+           onChange={handleChangeSProducto}
+       />
+       <button onClick={CrearProducto}>Crear</button>
+   </div>
