--- a/src/app/home/productos/productos.component.html
+++ b/src/app/home/productos/productos.component.html
@@ -1,5 +1,5 @@
 <div>
     CRUD Mantenedor Productos.
-    <!-- <CrearProducto></CrearProducto>
-    <TablaProductos></TablaProductos> -->
+    <app-crear-producto></app-crear-producto>
+    <app-tabla-productos></app-tabla-productos>
 </div>
