--- a/src/app/home/productos/tabla-productos/tabla-productos.component.html
+++ b/src/app/home/productos/tabla-productos/tabla-productos.component.html
@@ -1,1 +1,43 @@
-<p>tabla-productos works!</p>
+<div class="container justify-content-center">
+    <div class="container col-6 rounded bg-transparent  text-dark " >
+      <table class="table  table-ligth table-striped    justify-content-center " >
+        <thead class="thead-light"> 
+          <tr>
+            <th>
+              <button onClick={activarFiltros}>Filtrar</button>
+            </th>
+            <th scope="col"> 
+              <input type="text" id="txtFiltroNProducto" name="hookFiltroNProducto" onChange={changeFiltroNProducto} value={hookFiltroNProducto}/>
+            </th>
+            <th scope="col"> 
+              <input type="text" id="txtFiltroSProducto" name="hookFiltroSProducto" onChange={changeFiltroSProducto} value={hookFiltroSProducto}/>
+            </th>
+          </tr>
+          <tr>
+           <th scope="col">#</th>
+           <th scope="col">Nombre</th>
+           <th scope="col">Stock</th>
+          </tr>
+        </thead>
+        <tbody>
+          <!-- {productos.map((item) => ( -->
+            <tr>
+              <!-- <td>{item.id}</td> -->
+              <!-- <td>{item.nombre}</td>
+              <td>{item.stock}</td> -->
+              <!-- <td><DetalleProducto id={item.id}></DetalleProducto></td>
+              <td><ActualizarProducto id={item.id} ></ActualizarProducto></td>
+              <td><EliminarProducto id={item.id}></EliminarProducto></td> -->
+          </tr>
+          <!-- ))} -->
+        </tbody>
+      </table>
+      <div>
+        <tr>
+          <th><button onClick={paginaMenos} >Izquierda</button></th>
+          <!-- <th><p>{Paginacion}</p></th> -->
+          <th><button  onClick={paginaMas}>Derecha</button></th>
+        </tr>
+      </div>
+    </div>
+  </div>
