Pulir codigo,borrar los hooks

--- a/src/app/home/productos/crear-producto/crear-producto.component.html
+++ b/src/app/home/productos/crear-producto/crear-producto.component.html
@@ -1,4 +1,4 @@
-<div>
+<!-- <div>
    
       <button> Crear Producto </button>
        <div>Crear Producto</div>
@@ -28,4 +28,4 @@
            onChange={handleChangeSProducto}
        />
        <button onClick={CrearProducto}>Crear</button>
-   </div>
+   </div> -->
