--- a/src/app/home/productos/tabla-productos/tabla-productos.component.html
+++ b/src/app/home/productos/tabla-productos/tabla-productos.component.html
@@ -7,10 +7,10 @@
               <button onClick={activarFiltros}>Filtrar</button>
             </th>
             <th scope="col"> 
-              <input type="text" id="txtFiltroNProducto" name="hookFiltroNProducto" onChange={changeFiltroNProducto} value={hookFiltroNProducto}/>
+              <input type="text" id="txtFiltroNProducto" name="hookFiltroNProducto" onChange={changeFiltroNProducto} />
             </th>
             <th scope="col"> 
-              <input type="text" id="txtFiltroSProducto" name="hookFiltroSProducto" onChange={changeFiltroSProducto} value={hookFiltroSProducto}/>
+              <input type="text" id="txtFiltroSProducto" name="hookFiltroSProducto" onChange={changeFiltroSProducto} />
             </th>
           </tr>
           <tr>
