Se logra hacer BINDING e insercion desde angular
La clave esta en que se usar TS y JS

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div  className="App" role="main">
   <h2>CRUD Mantenedor Productos.</h2>
- <app-login></app-login>
+ <!-- <app-login></app-login> -->
  <app-home></app-home>
 
 </div>
